tweak letter spacing in nav to get better look and feel across devices and prevent nav wrap at some widths

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -25,5 +25,11 @@ nav.navbar-default .navbar-nav > li {
 }
 
 nav.navbar-default .navbar-nav > li > a {
-    letter-spacing: 2px;
+    letter-spacing: 1px;
+    @media (min-width: $screen-sm-min) {
+        letter-spacing: .5px;
+    }
+    @media (min-width: $screen-md-min) {
+        letter-spacing: 2px;
+    }
 }
